feat: split api into three routes instead of the just one route
